--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
-    "react-select": "^5.9.0"
+    "react-select": "^5.9.0",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
